# c8051-dap-server

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  omf_lines.txt  requirements.txt
Documentation/: DAP_implementation_status.md  DAP_server_plan.md  SiC8051F_DLL_proxy.md  agent_setup_guide.md  debugging_SOP.md  phase9_source_debug.md  project_goals_and_findings.md
Documentation/dll/: S8051_DLL_findings.md  SiC8051F_static_analysis.md
Documentation/xx_archive/: DAP_server_plan.md  phase9_source_debug.md
dap_server/: SiC8051F.wsp  agdi.h  agdi_loader.cpp  agdi_loader.h  bp_manager.cpp  bp_manager.h  dap_server.cpp  dap_server.h  dap_types.h  disasm8051.h  hex_loader.cpp  hex_loader.h  log.h  main.cpp  opcodes8051.h  registers.cpp  registers.h  run_control.cpp  run_control.h  symtab.cpp  symtab.h
scripts/: dump_omf.py  ensure_server.ps1  ensure_server_safe.ps1  install_extension.ps1  make_github_release.ps1  make_release.ps1  restart_server_safe.ps1  start_server.ps1  stop_server.ps1  stop_server_safe.ps1  test_dap.py  test_debug_launch.py  test_erase.py  test_flash.py  test_output_events.py
scripts/omf_analysis/: count_header_lines.py  dump_content_segs.py  dump_keil_records.py  dump_lines.py  dump_obj_types.py  dump_omf_records.py  dump_qninit_records.py  dump_raw_lines.py  dump_segdefs.py  try_interpretations.py
scripts/tests/: test_dap.py  test_debug_launch.py  test_erase.py  test_flash.py
vscode-extension/: README.md  extension.js  package.json
